    * Model cleanups and optimisations (#680, #675, #672, #674)
    * New "temple" building (#664)
    * Change non-local delivery mission reward calculation so that more urgent
      deliveries get higher rewards (#719)
    * Ships will now emerge from hyperspace at a point "close" to the source
      system (#724)
    * Jump duration estimate in sector view shown in days + hours (#738)

  * Fixes
    * Optimise trade ship cargo management (#632)
    * Ensure that stars in a binary pair do not overlap (#621, #627)
    * Model optimisations (#666)
    * modelviewer no longer crashes if invalid model name is given on command
      line (#669, #670)
    * Fix hyperspace behaviour after game load
    * Lua onGameEnd event now fires when game ends after player destruction (#684)
    * Remember sectorview info box visbility state across view switches and
      game saves (#685)
    * Don't pollute the global Lua namespace with translation functions (#696)
    * Fix assassination crash on mission completion/failure (#692, #694)
    * Fix delivery crash on dock
    * Model LOD switches now calculated correctly based on screen wdith (#704)
    * Fix potential deadlock in terrain generator (#661)
    * Initialise stock levels for equipment above the station's tech level (#719)
    * Trade ships only check trade prices in surrounding systems if it has
      starports (#728)
    * Determine damaged caused by collision between two ships using the other
      ship's mass, not our own (#732, #733)
    * Missile collisions will no longer cause damage (the explosion will
      though) (#734)
    * Prevent SystemBody.parent from crashing when the underlying StarSystem
      is no long in memory (#729)
    * Fix material use in ship landing lights (#656, #705)
    * Fix screenshot crashes (#742, #727, #645)
    * "Repair 1% hull" display correct % and cost when hull has <1% damage (#748, #467)
    * Fix error capture from filter functions to EquipType.GetEquipTypes,